[gd_scene load_steps=32 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://shop_menu/shop_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://in_game.gd" type="Script" id=3]
[ext_resource path="res://font/BoonTookMon-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://mini_game/mini_game_default/mini_game_default.tscn" type="PackedScene" id=5]
[ext_resource path="res://mini_game/mini_game_dug/mini_game_dug.tscn" type="PackedScene" id=6]
[ext_resource path="res://player_inventory_list/player_inventory_list.tscn" type="PackedScene" id=7]
[ext_resource path="res://mini_game/mini_game_yield/mini_game_yield.tscn" type="PackedScene" id=8]
[ext_resource path="res://mini_game/mini_game_seed/mini_game_seed.tscn" type="PackedScene" id=9]
[ext_resource path="res://ingame_art/setting2.png" type="Texture" id=10]
[ext_resource path="res://stop_menu/stop_menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://setting_menu/Setting_menu.tscn" type="PackedScene" id=12]
[ext_resource path="res://win_game_popup/end_game_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://ingame_art/o2.png" type="Texture" id=14]
[ext_resource path="res://ingame_art/o2_2.png" type="Texture" id=15]
[ext_resource path="res://ingame_art/time.png" type="Texture" id=16]
[ext_resource path="res://ingame_art/money.png" type="Texture" id=17]
[ext_resource path="res://ingame_art/setting.png" type="Texture" id=18]
[ext_resource path="res://ingame_art/energy.png" type="Texture" id=19]
[ext_resource path="res://ingame_art/energy2.png" type="Texture" id=20]
[ext_resource path="res://ingame_art/wingame.png" type="Texture" id=21]

[sub_resource type="AtlasTexture" id=26]
flags = 1
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 79, 12 )

[sub_resource type="AtlasTexture" id=27]
flags = 1
atlas = ExtResource( 15 )
region = Rect2( 13, 0, 66, 12 )

[sub_resource type="DynamicFont" id=28]
size = 4
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=25]
flags = 1
atlas = ExtResource( 20 )
region = Rect2( 21, 0, 54, 22 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 53, 14 )

[sub_resource type="DynamicFont" id=10]
size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 78, 22 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 21, 21 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 21, 21 )

[node name="in_game" type="Node2D"]
script = ExtResource( 3 )

[node name="world" type="YSort" parent="."]

[node name="map" type="YSort" parent="world"]
unique_name_in_owner = true

[node name="player" parent="world" instance=ExtResource( 1 )]
position = Vector2( 480, 270 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="ex" type="TextureRect" parent="ui"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 21 )

[node name="oxygen_bar" type="TextureProgress" parent="ui"]
unique_name_in_owner = true
margin_left = 114.0
margin_top = 33.0
margin_right = 193.0
margin_bottom = 45.0
value = 50.0
texture_under = SubResource( 26 )
texture_progress = SubResource( 27 )
texture_progress_offset = Vector2( 13, 0 )
__meta__ = {
"_editor_description_": "start 20"
}

[node name="oxygen_label" type="Label" parent="ui"]
margin_left = 127.0
margin_top = 33.0
margin_right = 193.0
margin_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "25/100"
align = 1
valign = 1

[node name="oxy_desc" type="Label" parent="ui"]
margin_left = 128.0
margin_top = 43.0
margin_right = 193.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "ออกซิเจน"
align = 1
valign = 1

[node name="player_energy_bar" type="TextureProgress" parent="ui"]
margin_left = 22.0
margin_top = 9.0
margin_right = 97.0
margin_bottom = 31.0
texture_under = ExtResource( 19 )
texture_progress = SubResource( 25 )
texture_progress_offset = Vector2( 21, 0 )
__meta__ = {
"_editor_description_": "start 20"
}

[node name="player_energy_label" type="Label" parent="ui"]
margin_left = 34.0
margin_top = 13.0
margin_right = 97.0
margin_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "25/100"
align = 1
valign = 1

[node name="player_energy_desc" type="Label" parent="ui"]
margin_left = 34.0
margin_top = 6.0
margin_right = 97.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "พลังชีวิต"
align = 1
valign = 1

[node name="money_desc" type="Label" parent="ui"]
margin_left = 219.0
margin_top = 6.0
margin_right = 271.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "งบประมาณ"
align = 1
valign = 1

[node name="money_panel" type="Panel" parent="ui"]
margin_left = 219.0
margin_top = 13.0
margin_right = 271.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 9 )

[node name="money_label" type="Label" parent="ui/money_panel"]
unique_name_in_owner = true
margin_left = 13.0
margin_top = 3.0
margin_right = 29.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 10 )
text = "00000"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="money_unit_label" type="Label" parent="ui/money_panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -8.0
margin_right = -3.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 11 )
text = "ทอง"
align = 1
valign = 1

[node name="time_desc" type="Label" parent="ui"]
margin_left = 121.0
margin_top = 2.0
margin_right = 199.0
margin_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "เวลา"
align = 1
valign = 1

[node name="time_panel" type="Panel" parent="ui"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 121.0
margin_top = -81.0
margin_right = 199.0
margin_bottom = -59.0
custom_styles/panel = SubResource( 12 )

[node name="time_label" type="Label" parent="ui/time_panel"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 8.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 11 )
text = "0000"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_group_": true
}

[node name="time_unit_label" type="Label" parent="ui/time_panel"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -7.0
margin_right = 30.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 11 )
text = "วินาที"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_group_": true
}

[node name="stop_desc" type="Label" parent="ui"]
margin_left = 293.0
margin_top = 30.0
margin_right = 312.0
margin_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "ตั้งค่า"
align = 1
valign = 1

[node name="stop_button" type="Button" parent="ui"]
margin_left = 291.0
margin_top = 9.0
margin_right = 313.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 14 )

[node name="player_inventory_list" parent="ui" instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0

[node name="mini_game_default" parent="ui" instance=ExtResource( 5 )]

[node name="mini_game_dug" parent="ui" instance=ExtResource( 6 )]
unique_name_in_owner = true

[node name="mini_game_seed" parent="ui" instance=ExtResource( 9 )]
unique_name_in_owner = true

[node name="mini_game_yield" parent="ui" instance=ExtResource( 8 )]
unique_name_in_owner = true

[node name="stop_menu" parent="ui" instance=ExtResource( 11 )]
visible = false

[node name="end_game_menu" parent="ui" instance=ExtResource( 13 )]

[node name="shop_menu" parent="ui" instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="setting_menu" parent="ui" instance=ExtResource( 12 )]
pause_mode = 2
unique_name_in_owner = true

[node name="sec_timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="ui/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="about_to_show" from="ui/end_game_menu" to="." method="_on_end_game_menu_about_to_show"]
[connection signal="popup_hide" from="ui/end_game_menu" to="." method="_on_end_game_menu_popup_hide"]
[connection signal="pressed" from="ui/end_game_menu/restart_area_button" to="." method="_on_restart_area_button_pressed"]
[connection signal="pressed" from="ui/end_game_menu/go_to_area_selection_button" to="." method="_on_go_to_area_selection_button_pressed"]
[connection signal="pressed" from="ui/end_game_menu/go_to_next_area_button" to="." method="_on_go_to_next_area_button_pressed"]
[connection signal="timeout" from="sec_timer" to="." method="_on_sec_timer_timeout"]

[editable path="ui/end_game_menu"]
